# robin

./: .gitignore  Ghci.hs  Makefile  README.md  hstools.cabal  robin.cabal
build-daemon/: BuildDaemon.hs
doc/: ideas  todo
ghci-dev/: GhciDev.hs
src/: BuildDaemon.hs  Command.hs  Console.hs  Deprecated.hs  GhciDev.hs  Lock.hs  Main.hs  PidFile.hs  Types.hs  Util.hs  Watch.hs
src/BuildDaemon/: Lock.hs  PidFile.hs  Types.hs  Watch.hs
src/Console/: Test.hs  Types.hs
