
name:           hstools
version:        0.0.1
cabal-version:  >= 1.10
build-type:     Simple
license:        GPL-3
license-file:   LICENSE.txt
copyright:      (c) 2013 Karl Voelker
author:         Karl Voelker
maintainer:     ktvoelker@gmail.com
stability:      experimental
bug-reports:    mailto:ktvoelker@gmail.com
synopsis:       Some tools for Haskell development
category:       Development
tested-with:    GHC == 7.6.3

Flag debug
  description: Enable debug support
  default: False

Executable ghci-dev
  main-is: GhciDev.hs
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options:
    -Wall
    -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-orphans
  if flag(Debug)
    ghc-options: -DDEBUG
  else
    ghc-options: -O2
  build-depends:
    base      >= 4    && < 5,
    process   >= 1.1  && < 1.2,
    unix      >= 2.6  && < 2.7,
    directory >= 1.2  && < 1.3,
    Cabal     >= 1.16 && < 1.17

Executable cabal-dev-build-daemon
  main-is: BuildDaemon.hs
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options:
    -Wall
    -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-orphans
  build-depends:
    base            >= 4     && < 5,
    hdaemonize      >= 0.4   && < 0.5,
    process         >= 1.1   && < 1.2,
    fsnotify        >= 0.0.6 && < 0.1,
    directory       >= 1.2   && < 1.3,
    Cabal           >= 1.16  && < 1.17,
    system-filepath >= 0.4.7 && < 0.5,
    text            >= 0.11  && < 0.12,
    unix            >= 2.6   && < 2.7,
    -- TODO versions
    resourcet,
    mtl,
    data-lens,
    data-lens-fd,
    data-lens-template,
    lifted-base,
    monad-control
  default-extensions:
    FlexibleContexts
    LambdaCase
  other-extensions:
    OverloadedStrings
    TemplateHaskell

