
name:           robin
version:        0.0.1
cabal-version:  >= 1.10
build-type:     Simple
license:        GPL-3
license-file:   LICENSE.txt
copyright:      (c) 2013-2015 Karl Voelker
author:         Karl Voelker
maintainer:     robin@karlv.net
stability:      experimental
bug-reports:    mailto:robin@karlv.net
synopsis:       A build daemon for Haskell development
category:       Development
tested-with:    GHC == 7.10.1

Executable robin
  main-is: BuildDaemon.hs
  default-language: Haskell2010
  hs-source-dirs: src
  other-modules:
    BuildDaemon.Lock
    BuildDaemon.PidFile
    BuildDaemon.Types
    BuildDaemon.Watch
    Util
  ghc-options:
    -Wall
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-orphans
    -O2
  build-depends:
    base            >= 4,
    hdaemonize      >= 0.4,
    process         >= 1.1,
    fsnotify        >= 0.0.6,
    directory       >= 1.2,
    Cabal           >= 1.16,
    system-filepath >= 0.4.7,
    text            >= 0.11,
    unix            >= 2.6,
    -- TODO versions
    resourcet,
    mtl,
    data-lens,
    data-lens-fd,
    data-lens-template,
    lifted-base,
    monad-control,
    time,
    system-fileio
  default-extensions:
    FlexibleContexts
    LambdaCase
  other-extensions:
    OverloadedStrings
    TemplateHaskell

