
name:           robin
version:        0.0.1
cabal-version:  >= 1.10
build-type:     Simple
license:        GPL-3
license-file:   LICENSE.txt
copyright:      (c) 2013-2015 Karl Voelker
author:         Karl Voelker
maintainer:     robin@karlv.net
stability:      experimental
bug-reports:    mailto:robin@karlv.net
synopsis:       A build daemon for Haskell development
category:       Development
tested-with:    GHC == 7.10.1

Executable robin
  main-is: Main.hs
  default-language: Haskell2010
  hs-source-dirs: src
  other-modules:
    Lock
    PidFile
    Types
    Util
    Watch
  ghc-options:
    -Wall
    -fno-warn-missing-signatures
    -fno-warn-name-shadowing
    -fno-warn-orphans
  build-depends:
    Cabal,
    base,
    directory,
    filepath,
    fsnotify,
    hdaemonize,
    lens,
    lifted-base,
    monad-control,
    mtl,
    process,
    resourcet,
    text,
    time,
    unix
  default-extensions:
    FlexibleContexts
    LambdaCase
  other-extensions:
    OverloadedStrings
    TemplateHaskell

